<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context="com.socket9.thetsl.ui.signin.CreateAccountActivity">

    <include layout="@layout/layout_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                android:nextFocusDown="@+id/etEmail"
                android:hint="@string/create.account.et.name"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                android:nextFocusDown="@+id/etPassword"
                android:hint="@string/create.account.et.email"
                android:inputType="textEmailAddress"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:met_floatingLabel="highlight"
                android:nextFocusDown="@+id/etConfirmPassword"
                android:hint="@string/create.account.et.password"
                android:inputType="textPassword"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusDown="@+id/etPhone"
                app:met_floatingLabel="highlight"
                android:hint="@string/create.account.et.confirmpw"
                android:inputType="textPassword"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusDown="@+id/etAddress"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                android:maxLength="10"
                android:hint="@string/create.account.et.mobile"
                android:inputType="phone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight"
                android:imeOptions="actionDone"
                android:hint="@string/create.account.et.address"
                android:maxLines="3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryDark"
                android:text="@string/create.account.btn.register"
                android:textColor="@color/colorTextPrimary"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>




